truly fixed fade overlaping text without messing up search page

--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,6 @@ body {
 .page-title {
   color: var(--tx);
   font-size: 46px;
+  z-index: 5;
+  position: relative;
 }
